--- a/css/style.css
+++ b/css/style.css
@@ -20,13 +20,12 @@ body::-webkit-scrollbar {
 }
 
 body::-webkit-scrollbar-track {
-  background: rgb(0, 0, 0);
+  background: linear-gradient(45deg, #e4bbe4, rgb(216, 128, 196));
 }
 
 body::-webkit-scrollbar-thumb {
-  background: linear-gradient(45deg, #814681, rgb(92, 58, 84));
+  background: #c26ead;
 }
-
 
 
 
