--- a/css/login.css
+++ b/css/login.css
@@ -34,6 +34,18 @@
   background-color: #fefefe;
   margin: 5px auto;
   border: 1px solid #888;
+  border-radius: 10px;
   width: 80%;
   display: block;
+}
+
+
+.modal-content input{
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
 }
